fixed z-index modal

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,7 +230,7 @@ a {
   cursor: pointer;
   transition: 0.3s ease;
   position: absolute;
-  z-index: 100;
+  z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -429,7 +429,7 @@ button.next {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 10;
+  z-index: 20;
 }
 
 .modal-content {
@@ -445,6 +445,7 @@ button.next {
   width: 70%;
   animation-duration: 0.5s;
   animation-timing-function: cubic-bezier(0.42, 0, 0.21, 0.99);
+  z-index: 11;
 }
 
 .modal-header {
@@ -702,6 +703,8 @@ input[type="range"]:active::-ms-thumb {
 
   .modal-content {
     width: 100%;
+    height: 90%;
+    z-index: 12;
 }
 
 #playDiv button{
